[package]
name = "fordragon-backend"
version = "0.1.0"
authors = ["Andras Gyori <gyorandr@gmail.com>", "Andras Racz-Kovacs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["full"]}
bytes = "0.6.0"
