[package]
name = "test_client"
version = "0.1.0"
authors = ["Andras Gyori <gandras@cloudera.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["full"]}
server = { path = "../server"}
bytes = "0.6.0"
sha2 = "0.9.2"
num_enum = "0.5.1"
log = "0.4.11"
env_logger = "0.8.1"
